# Workflow

./: .eslintrc.cjs  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  capacitor.config.json  config.py  create_icon.py  create_logo_options.py  dark_mode.json  dropdown_example.html  light_theme.json  main.js  package-lock.json  package.json  preload.js  python_api.py  requirements.txt  start_app.bat  start_app.sh  ui_helpers.py  web_app.py  weekly_tracker.py  workflow.py
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
data/: deps.json  prog_auth.json  workflow_data.json.enc
data/Archive/2026-02/: asd_2.txt
data/Backups/: workflow_data_20260201_191338.enc  workflow_data_20260201_192758.enc  workflow_data_20260201_192859.enc  workflow_data_20260201_192959.enc  workflow_data_20260201_193059.enc
docs/: BACKUP_RESTORE.md  USER_MANUAL.md  android.md
electron/: main.js  preload.js
native/android/: WorkflowBillingPlugin.kt
scripts/: run-tauri.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: app.js  index.html  overrides.css  styles.css
web/app/: local-api.js  state.js  tauri-bridge.js  ui.js  utils.js
web/assets/fonts/: README.md
web/manuals/: ERRORS_README.md  README.md  USER_MANUAL.md
web_app_install/: app.js  index.html  styles.css  web_app.py  workflow.py
web_app_install/web/: app.js  index.html  overrides.css  styles.css
web_app_install/web/locales/: en.json
(+3 files in other folders)
