[package]
name = "workflow_tauri"
version = "1.0.0"
description = "Workflow Tracker desktop runtime"
authors = ["David Citarelli <davidcit646@gmail.com>"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-opener = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
